--- a/src/main/resources/templates/user/UserIndex.html
+++ b/src/main/resources/templates/user/UserIndex.html
@@ -92,27 +92,21 @@
         var applyStatus = [[${delegateInfo.applicationStatusID}]];
         switch (applyStatus) {
             case 1:
-                $('#applyProgressBar').css('width', '12.5%');
+                $('#applyProgressBar').css('width', '16.6%');
                 break;
             case 3:
-                $('#applyProgressBar').css('width', '25%');
+                $('#applyProgressBar').css('width', '33.2%');
                 break;
             case 5:
-                $('#applyProgressBar').css('width', '37.5%');
-                break;
-            case 7:
                 $('#applyProgressBar').css('width', '50%');
                 break;
-            case 9:
-                $('#applyProgressBar').css('width', '62.5%');
+            case 7:
+                $('#applyProgressBar').css('width', '66.5');
                 break;
-            case 11:
-                $('#applyProgressBar').css('width', '75%');
+            case 8:
+                $('#applyProgressBar').css('width', '83%');
                 break;
-            case 12:
-                $('#applyProgressBar').css('width', '87.5%');
-                break;
-            case 14:
+            case 10:
                 $('#applyProgressBar').css('width', '100%').addClass('bg-success');
                 break;
             default:
