--- a/src/main/resources/templates/allUser/userHeader.html
+++ b/src/main/resources/templates/allUser/userHeader.html
@@ -31,33 +31,19 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fa fa-laugh"></i>
+                    <i class="fa fa-github fa-2x"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Гулаш&nbsp;система</div>
             </a>
 
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
-            <!--        &lt;!&ndash; Nav Item - Dashboard &ndash;&gt;-->
-            <!--        <li class="nav-item active">-->
-            <!--            <a class="nav-link" th:href="@{/user/index}">-->
-            <!--                <i class="fa fa-fw fa-tachometer"></i>-->
-            <!--                <span>Dashboard</span></a>-->
-            <!--        </li>-->
-
-            <!--        &lt;!&ndash; Divider &ndash;&gt;-->
-            <!--        <hr class="sidebar-divider">-->
-
-            <!--        &lt;!&ndash; Heading &ndash;&gt;-->
-            <!--        <div class="sidebar-heading">-->
-            <!--            Interface-->
-            <!--        </div>-->
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item active">
                 <a class="nav-link collapsed" th:href="@{/user/index}">
                     <i class="fa fa-fw fa-user"></i>
-                    <span>申请状态</span>
+                    <span th:text="#{applicationStatus}">申请状态</span>
                 </a>
             </li>
 
@@ -65,7 +51,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#">
                     <i class="fa fa-fw fa-wrench"></i>
-                    <span>个人资料</span>
+                    <span th:text="#{personalInformation}"></span>
                 </a>
             </li>
 
@@ -81,41 +67,27 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" th:href="@{/user/userInterviewDetail(id=${session.USER_INFO.id})}">
                     <i class="fa fa-fw fa-folder"></i>
-                    <span>面试信息</span>
+                    <span th:text="#{interviewInfo}"></span>
                 </a>
             </li>
             <!-- Nav Item - Seat Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" th:href="@{/user/userSeatDetail(id=${session.USER_INFO.id})}">
                     <i class="fa fa-fw fa-folder"></i>
-                    <span>席位信息</span>
+                    <span th:text="#{seatInfo}"></span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link collapsed" th:href="@{/user/userGroupDetail(id=${session.USER_INFO.id})}">
                     <i class="fa fa-fw fa-folder"></i>
-                    <span>代表团信息</span>
+                    <span th:text="#{groupInfo}"></span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link collapsed" th:href="@{/user/userBillDetail(id=${session.USER_INFO.id})}">
                     <i class="fa fa-fw fa-wrench"></i>
-                    <span>账单信息</span>
+                    <span th:text="#{billInfo}"></span>
                 </a>
-            </li>
-            <!-- Nav Item - File -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
-                    <i class="fa fa-fw fa-file"></i>
-                    <span>文件</span>
-                </a>
-            </li>
-            <!-- Nav Item - Util -->
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fa fa-fw fa-table"></i>
-                    <span>Tables</span></a>
             </li>
 
             <!-- Divider -->
@@ -181,127 +153,28 @@
                             </div>
                         </li>
 
-                        <!-- Nav Item - Alerts -->
-                        <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">3+</span>
-                            </a>
-                            <!-- Dropdown - Alerts -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                 aria-labelledby="alertsDropdown">
-                                <h6 class="dropdown-header">
-                                    通知中心
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fa fa-file-alt text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-success">
-                                            <i class="fa fa-donate text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-warning">
-                                            <i class="fa fa-exclamation-triangle text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">查看全部通知</a>
-                            </div>
-                        </li>
 
                         <!-- Nav Item - Messages -->
                         <li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-envelope fa-fw"></i>
-                                <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
+                                <i class="fa fa-language fa-fw"></i><span th:text="#{changeLanguage}"></span>
                             </a>
                             <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="messagesDropdown">
-                                <h6 class="dropdown-header">
-                                    消息中心
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60"
-                                             alt="">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div class="font-weight-bold">
-                                        <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                            problem I've been having.
-                                        </div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                    </div>
+                                <a class="dropdown-item d-flex align-items-center" href="/user/index?lang=zh_CN">
+                                    简体中文
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60"
-                                             alt="">
-                                        <div class="status-indicator"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">I have the photos that you ordered last month, how
-                                            would
-                                            you like them sent to you?
-                                        </div>
-                                        <div class="small text-gray-500">Jae Chun · 1d</div>
-                                    </div>
+                                <a class="dropdown-item d-flex align-items-center" href="/user/index?lang=zh_TW">
+                                    繁體中文
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60"
-                                             alt="">
-                                        <div class="status-indicator bg-warning"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Last month's report looks great, I am very happy with
-                                            the
-                                            progress so far, keep up the good work!
-                                        </div>
-                                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                    </div>
+                                <a class="dropdown-item d-flex align-items-center" href="/user/index?lang=ja_JP">
+                                    日本語
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                                             alt="">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                                            told
-                                            me that people say this to all dogs, even if they aren't good...
-                                        </div>
-                                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                                    </div>
+                                <a class="dropdown-item d-flex align-items-center" href="/user/index?lang=en_US">
+                                    English
                                 </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
                             </div>
                         </li>
 
