--- a/src/main/resources/templates/allUser/adminHeader.html
+++ b/src/main/resources/templates/allUser/adminHeader.html
@@ -31,7 +31,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fa fa-laugh"></i>
+                    <i class="fa fa-github"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Гулаш&nbsp;система</div>
             </a>
