--- a/src/main/resources/templates/allUser/footer.html
+++ b/src/main/resources/templates/allUser/footer.html
@@ -19,7 +19,7 @@
 <body id="page-top">
 <div class="container my-auto" th:fragment="footer">
     <div class="copyright text-center my-auto">
-        <span>Copyright &copy; Your Website 2019</span>
+        <span>Copyright &copy; Ministerium&nbsp;für&nbsp;Staatssicherheit&nbsp;版权所有</span>
     </div>
 </div>
 </body>
