--- a/src/main/resources/templates/allUser/login.html
+++ b/src/main/resources/templates/allUser/login.html
@@ -1,110 +1,82 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.js"></script>
+    <script src="../js/sb-admin-2.js"></script>
+    <script src="../js/cropper.js"></script>
+    <script src="../js/jquery.easing.js"></script>
+    <script src="../js/jquery-cropper.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap-select.js"></script>
+    <script src="../js/bootstrap-select-defaults-zh_CN.js"></script>
     <link href="../css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/font-awesome.css">
-    <title>主页</title>
+    <link href="../css/sb-admin-2.css" rel="stylesheet">
+    <link href="../css/font-awesome.css" rel="stylesheet">
+    <link href="../css/cropper.css" rel="stylesheet">
+    <link href="../css/bootstrap-select.css" rel="stylesheet">
+    <title>登录-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
-<style>
-    html,
-    body {
-        height: 100%;
-        /*font-family: Arial,sans-serif;*/
-    }
 
-    body {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: center;
-        align-items: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-        font-family: 等线, sans-serif;
-    }
+<body class="bg-gradient-primary">
 
-    .form-signin {
-        width: 100%;
-        max-width: 330px;
-        padding: 15px;
-        margin: auto;
-    }
+<div class="container">
 
-    .form-signin .checkbox {
-        font-weight: 400;
-    }
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
 
-    .form-signin .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-    }
+        <div class="col-xl-10 col-lg-12 col-md-9">
 
-    .form-signin .form-control:focus {
-        z-index: 2;
-    }
-
-    .form-signin input[type="email"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-
-    .form-signin input[type="password"] {
-        margin-bottom: 10px;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
-
-    .submit-button {
-        background-color: #A3222E;
-        border-color: #A3222E;
-    }
-
-    .submit-button:hover {
-        background-color: #AC4F43;
-        border-color: #AC4F43;
-    }
-
-    .submit-button:active {
-        background-color: #AC4F43;
-    !important;
-        border-color: #AC4F43;
-    !important;
-    }
-
-    @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-        }
-    }
-</style>
-<body class="text-center">
-<form th:action="@{login}" method="POST" class="form-signin" id="loginForm">
-    <a th:href="@{/}"><img class="mb-4" src="../img/logo/logoNoTM.png" alt="精罗激怒" width="188" height="90"></a>
-    <h1 class="h3 mb-3 font-weight-normal">请先登录</h1>
-    <label for="email" class="sr-only"></label>
-    <input class="form-control" name="email" id="email" value="" type="text"
-           placeholder="请输入电子邮箱" required
-           autofocus>
-    <label for="password" class="sr-only"></label>
-    <input class="form-control" name="password" id="password" value="" type="password"
-           placeholder="请输入密码"
-           required>
-    <span th:if="${param.error}" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}" style="color: red"></span>
-    <br>
-    <button type="submit" class="submit-button btn btn-primary btn-block ">登录</button>
-    <label for="remember-me"></label>
-    <input type="checkbox" class="" name="remember-me" value="" id="remember-me">记住我
-    <br>
-    <p>忘记密码？<a href="#">找回密码</a></p>
-    <a href="signUp" class="btn btn-primary btn-block submit-button">报名参会</a>
-</form>
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">登陆以继续</h1>
+                                </div>
+                                <form class="user" th:action="@{login}" method="POST" id="loginForm">
+                                    <div class="form-group">
+                                        <label for="email"></label>
+                                        <input id=email type="email" name="email" class="form-control form-control-user"
+                                               aria-describedby="emailHelp"
+                                               placeholder="请输入邮箱……">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password"></label>
+                                        <input type="password" name="password" class="form-control form-control-user"
+                                               id="password" placeholder="请输入密码……">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" name="remember-me"
+                                                   value="" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">Remember Me</label>
+                                        </div>
+                                    </div>
+                                    <span th:if="${param.error}" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}" style="color: red"></span>
+                                    <button type="submit" class="btn btn-primary btn-user btn-block">登录</button>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="#">忘记密码？</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="signUp">报名参会</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
